fixes #318 upgrade maven-javadoc-plugin version