@@ -99,7 +99,7 @@
         <versions.classgraph>4.8.22</versions.classgraph>
         <version.swagger>2.0.7</version.swagger>
         <version.javadoc-packagelist-plugin>1.0.0</version.javadoc-packagelist-plugin>
-        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        <version.maven-javadoc>3.1.0</version.maven-javadoc>
     </properties>
     
     <modules>
@@ -400,7 +400,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>${version.maven-javadoc}</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
